fix(css): use width 100% to remove blank space on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  max-width: 100%;
 }
 body {
   display: grid;
@@ -19,11 +18,11 @@ body {
 /* HOME */
 
 .background-image {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100dvh;
+  width: 100%;
   object-fit: cover;
   object-position: top;
   z-index: -1;
